--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mediasoup": "^3.18.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
